k8s/production/microservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice-service
  namespace: microservice
  labels:
    app: python-microservice
spec:
  selector:
    app: python-microservice
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
